# goit_python_web_hw_05

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run_servers.sh
html/: error.html  index.html  main.js
hw_05/: arg_parse.py  arg_parse_async.py  client.py  client_websoket.py  currency_list.py  exchange.py  main.py  server.py  server_http_async.py  server_http_sync.py  server_websoket.py
hw_05/html/: index.html
scripts/: docker_build_image.cmd  docker_run.cmd  docker_stop.cmd
