[tool.poetry]
name = "goit-python-web-hw-05"
version = "0.2.0"
description = ""
authors = ["lexxai <lexxai@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lexxai/goit_python_web_hw_05"
packages = [
    { include = "hw_05" },
]

[tool.poetry.scripts]
exchange_cli = 'hw_05.exchange:main'

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"
tqdm = "^4.66.1"
websockets = "^11.0.3"
aiopath = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
